// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generateCredentialCardConfig should match snapshot for color [#003366], taxonomy [%s] and theme [%s] 1`] = `
{
  "background": {
    "angle": 45,
    "colors": [
      "#e6f2ff",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738699",
  "titleColor": "#2b2f33",
}
`;

exports[`generateCredentialCardConfig should match snapshot for color [#7AC1FA], taxonomy [%s] and theme [%s] 1`] = `
{
  "background": {
    "angle": 45,
    "colors": [
      "#e6f4ff",
      "#F2F2F2",
    ],
  },
  "borderColor": "#738899",
  "titleColor": "#2b3033",
}
`;

exports[`generateCredentialCardConfig should match snapshot for color [#CDD2FC], taxonomy [%s] and theme [%s] 1`] = `
{
  "background": {
    "angle": 45,
    "colors": [
      "#e6e8ff",
      "#F2F2F2",
    ],
  },
  "borderColor": "#737799",
  "titleColor": "#2b2c33",
}
`;

exports[`generateCredentialCardConfig should match snapshot for color [#FFB357], taxonomy [%s] and theme [%s] 1`] = `
{
  "background": {
    "angle": 45,
    "colors": [
      "#fff4e6",
      "#F2F2F2",
    ],
  },
  "borderColor": "#998873",
  "titleColor": "#33302b",
}
`;
